# iterations

./: .hgignore  LICENSE  README.md  abstract_iterator.hpp  bfs_iterator.hpp  bitbucket-pipelines.yml  compact.hpp  copy_assignable.hpp  count_iterator.hpp  cycle_iterator.hpp  dfs_iterator.hpp  filter_iterator.hpp  flatten_iterator.hpp  generate_iterator.hpp  group_iterator.hpp  itemize_iterator.hpp  iterator_adapter.hpp  iterator_view.hpp  map_iterator.hpp  memo_iterator.hpp  product_iterator.hpp  run_tests.sh  sequence_iterator.hpp  shared_queue.hpp  shared_stack.hpp  store_iterator.hpp  zip_iterator.hpp
tests/: CMakeLists.txt  run_tests.cpp
tests/src/: test_abstract.cpp  test_bfs.cpp  test_count.cpp  test_cycle.cpp  test_dfs.cpp  test_filter.cpp  test_flatten.cpp  test_general.cpp  test_generate.cpp  test_group.cpp  test_itemize.cpp  test_map.cpp  test_memo.cpp  test_product.cpp  test_seq.cpp  test_store.cpp  test_zip.cpp  tests_common.h
